<resources>
    <string name="app_name">WikiApp</string>
    <string name="configure_title">Configure storage and permissions:</string>
    <string name="choose_target">Select wiki to load:</string>
    <string name="select_hint">SELECT A WIKI</string>
    <string name="dir_select">Select directory for wikis (required):</string>
    <string name="select_directory">Select directory</string>
    <string name="change_directory">Change directory</string>
    <string name="no_select">No directory selected.</string>
    <string name="bad_select">Selected directory unusable.</string>
    <string name="storage_prm">Storage access permission (required):</string>
    <string name="grant">Grant</string>
    <string name="not_granted">Not granted.</string>
    <string name="granted">Granted.</string>
    <string name="battery_prm">Disable battery saving for external browser use (optional):</string>
    <string name="disable">Disable</string>
    <string name="check">Check</string>
    <string name="not_disabled">Not disabled.</string>
    <string name="disabled">Disabled.</string>
    <string name="config_open">Open</string>
    <string name="menu_handle">Menu handle</string>
    <string name="external_link">External link</string>
    <string name="open_browser">Open in a browser</string>
    <string name="ignore">Ignore</string>
    <string name="copy_link">Copy link</string>
    <string name="copy_label">External URL</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="load">Load</string>
    <string name="cancel">Cancel</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="go_to_page">Go to page</string>
    <string name="external_browser">External browser</string>
    <string name="configuration">Configuration</string>
    <string name="hide_menu_button">Hide menu button</string>
    <string name="directory_unusable">Directory unusable.</string>
    <string name="no_db">No sqlite database in directory.</string>
    <string name="too_many_db">Too many databases in directory.</string>
    <string name="failed_find_1">Failed to find</string>
    <string name="failed_find_2">in directory.</string>
    <string name="grab_wiki">Grab an online wiki:</string>
    <string name="grab">Grab</string>
    <string name="stop">Stop</string>
    <string name="input_url">Input wiki api url:</string>
    <string name="fandom_features">Enable \"Fandom\" features</string>
    <string name="grabber">Grabber</string>
    <string name="confirm_option">Confirm option</string>
    <string name="confirm_msg">\"Fandom\" features enabled, but api url does not contain \"fandom.com\"</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="error">Error:</string>
    <string name="interrupted">Exception interrupted</string>
    <string name="output">Output:</string>
    <string name="set_admin">Set administrator account username and password:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
</resources>